--- a/templates/Bloque/contacto.html
+++ b/templates/Bloque/contacto.html
@@ -56,7 +56,7 @@
 
             <script src="{% static '/js/contacto.js'%}"></script>
 
-            <input type="hidden" name="_next" value="http://127.0.0.1:5502/contacto.html">
+            <!-- <input type="hidden" name="_next" value="http://127.0.0.1:5502/contacto.html"> -->
             <input type="hidden" name="_captcha" value="false">
         </form>
     </div>
