--- a/templates/Bloque/listadoSucursales.html
+++ b/templates/Bloque/listadoSucursales.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="assets/media/img/tecnoflow(2).png">
-    <link rel="stylesheet" href="./assets/css/sucursales.css">
+    <link rel="shortcut icon" href= "{% static '/media/img/logonuevo3.png' %}" >
+    <link rel="stylesheet" href="{% static 'css/sucursales.css'%}">
     
     <title>Tecno Flow</title>
 
@@ -18,7 +19,8 @@
 </head>
 
 <body>
-    <iframe src="../media/listado_de_sucursales.pdf" title="Listado de sucursales"></iframe>
+    <iframe src="{% static 'media/listado_de_sucursales.pdf'%}" title="Listado de sucursales"></iframe>
 
 </body>
+
 </html>
