--- a/cotiza_app/templates/cotiza_detail.html
+++ b/cotiza_app/templates/cotiza_detail.html
@@ -4,8 +4,19 @@
 <main>
     <div class="container">
     <div class="cotiza_celu">
+        <table>
+            <tr>
+              <th colspan="2"><h1>{{ cotizacion.marca }}</h1></th>
+            </tr>
+            {% for label, value in cotizacion.get_fields %}
+            <tr>
+              <td>{{ label|upper }}</td>
+              <td>{{ value }}</td>
+            </tr>
+            {% endfor %}
+          </table>
        
-        <h1>{{cotizacion.marca}}</h1>
+       <!--  <h1>{{cotizacion.marca}}</h1>
 
         {% for label, value in cotizacion.get_fields %}
 
@@ -13,7 +24,7 @@
        
 
         {% endfor %}
-
+ -->
         <a href="{% url 'cotiza:all' %}">BACK</a>
     </div>
 </div>
