--- a/cotiza_app/templates/cotiza.html
+++ b/cotiza_app/templates/cotiza.html
@@ -7,7 +7,37 @@
     <div class="cotiza_celu">
         <h1>Todas Las Reparaciones</h1>
         <h2><a href="{% url 'cotiza:create' %}">Crear Cotizacion de Reparacion</a></h2>
-        {% for cotizacion in cotizacion_list %}
+        <table>
+            <thead>
+              <tr>
+                <th> ID </th>
+                <th> Marca </th>
+                <th> Modelo </th>
+                <th> Problema </th>
+                <th> Fecha </th>
+                <th> Detalle </th>
+                <th> Editar </th>
+                <th> Borrar </th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for cotizacion in cotizacion_list %}
+              <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ cotizacion.marca }}</td>
+                <td>{{ cotizacion.modelo }}</td>
+                <td>{{ cotizacion.descrip_falla }}</td>
+                <td>{{ cotizacion.fecha }}</td>
+                <td><a href="{% url 'cotiza:detail' cotizacion.id %}">+</a></td>
+                <td><a href="{% url 'cotiza:update' cotizacion.id %}">+</a></td>
+                <td><a href="{% url 'cotiza:delete' cotizacion.id %}">+</a></td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+
+
+      <!--   {% for cotizacion in cotizacion_list %}
             <div class="list">
                 <span>
                     <p>{{ forloop.counter }}</p>
@@ -33,7 +63,7 @@
             </span>
         </div>
 
-        {% endfor %}
+        {% endfor %} -->
     </div>
 </div>
 </main>
